tests/urmoac/errors/net_issues/edge_vmax_0/errors.urmoac
Edge '10000' has a speed of 0.
